@startuml


interface DeviceObserver {
    + {abstract} onBomb() : void
    + {abstract} onFreeze() : void
}

class EnemyAircraft {
    + onBomb() : void
    + onFreeze() : void
}

abstract class AlarmSubject {
    - devices : List<DeviceObserver>
    + addDevice(List<DeviceObserver>): void
    + removeDevice(device : DeviceObserver) : void
    + {abstract} notifyDevices(): void
    + {abstract} trigger() : void
}

class BombProp {
    + applyEffect(): void
    + notifyDevices(): void
    + trigger() : void
}

class FreezeProp {
    + applyEffect(): void
    + notifyDevices(): void
    + trigger() : void
}

EnemyAircraft .up.|>  DeviceObserver

BombProp -up-|> AlarmSubject
FreezeProp -up-|> AlarmSubject


AlarmSubject o-right-> DeviceObserver


@enduml
